--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "resin-magic-forge",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "nuxt": "^3.11.2",
@@ -16,6 +16,7 @@
     "vue-router": "^4.3.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
