--- a/package.json
+++ b/package.json
@@ -12,11 +12,22 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@formkit/nuxt": "^1.6.2",
+    "@iconify/json": "^2.2.206",
+    "@iconify/tailwind": "^1.0.1",
+    "autoprefixer": "^10.4.19",
     "nuxt": "^3.11.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-carousel-nuxt": "^1.1.1"
   },
   "engines": {
     "node": "20.x"
+  },
+  "devDependencies": {
+    "daisyui": "^4.10.5",
+    "nuxt-icon": "^0.6.10"
   }
 }
